cmake_minimum_required(VERSION 3.15)
project(TemaPOO2)

set(CMAKE_CXX_STANDARD 14)

add_executable(TemaPOO2 main.cpp Persoana.cpp Persoana.h Abonat.h cmake-build-debug/Abonat.cpp Abonat_Skype.h Abonat_Skype.cpp Abonat_Skype_Romania.h Abonat_Skype_Romania.cpp Abonat_Skype_Extern.cpp Abonat_Skype_Extern.h Agenda.h Agenda.cpp AgendaExtern.h AgendaExtern.cpp)